tests/negative/traits/invoke_dyn_mutability.orng
// invoke_dyn_mutability.orng:28:6: error: receiver `&mut self` of method `lmao` incompatible with type `&dyn Lol`
//     x.>lmao()
//     ^
// invoke_dyn_mutability.orng:28:8: error: the type `&dyn Lol` does not contain the member `lmao`
//     x.>lmao()
//       ^
// invoke_dyn_mutability.orng:12:15: note: candidate not viable: receiver mutability mismatch
//     virtual fn lmao(&mut self) -> ()
//              ^
// 
trait Lol {
    virtual fn lmao(&mut self) -> ()
}

impl Lol for Int {
    virtual fn lmao(&mut self) -> () {
        self^ = 30
    }
}

fn main() -> Int {
    let x = 5
    f(&x)
    x
}

fn f(x: &dyn Lol) -> () {
    x.>lmao()
}